--- a/site/styles.css
+++ b/site/styles.css
@@ -1,3 +1,24 @@
+@font-face {
+    font-family: "Computer Modern";
+    src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf');
+  }
+@font-face {
+  font-family: "Computer Modern";
+  src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunsx.otf');
+  font-weight: bold;
+}
+@font-face {
+  font-family: "Computer Modern";
+  src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunsi.otf');
+  font-style: italic, oblique;
+}
+@font-face {
+  font-family: "Computer Modern";
+  src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunbxo.otf');
+  font-weight: bold;
+  font-style: italic, oblique;
+}
+
 .content {
     display: flex;
     justify-content: space-between;
@@ -17,16 +38,38 @@
 
 body {
     max-width: 80%;
+    font-family: "Computer Modern";
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Computer Modern", sans-serif;
 }
 
 textarea {
     font-size: .8rem;
     letter-spacing: 1px;
 }
+
 textarea {
     padding: 10px;
     line-height: 1.5;
     border-radius: 5px;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px #999;
+}
+
+blockquote {
+    margin-left: 0px;
+    margin-right: 0px;
+    padding: 1px;
+    padding-left: 20px;
+    border-left: solid 5px #d9a300;
+    background: #fff0b4;
+}
+
+pre {
+    background: #eee;
+    border: solid 2px gray;
+    border-radius: 5px;
+    padding: 10px
 }
