feat: The content div expands to full height now

--- a/site/styles.css
+++ b/site/styles.css
@@ -19,8 +19,23 @@ font-weight: bold;
 font-style: italic, oblique;
 }
 
+html {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 body {
+  display: flex;
+  flex-direction: column;
   font-family: "Computer Modern";
+  height: 100%;
+}
+
+.input_container {
+  display: flex;
+  flex-direction: column;
+  margin-right: 10px;
   height: 100%;
 }
 
@@ -31,6 +46,7 @@ body {
   flex-direction: column;
   width: 100%;
   border-radius: 10px;
+  margin-left: 10px;
 }
 
 .scroll_flex_element {
@@ -52,6 +68,7 @@ textarea {
 }
 
 textarea {
+  height: inherit;
   padding: 10px;
   line-height: 1.5;
   border-radius: 5px;
@@ -79,6 +96,7 @@ margin: 10px;
 }
 
 .header {
+  height: 100px;
 }
 
 .content {
@@ -89,4 +107,5 @@ margin: 10px;
 }
 
 .footer {
+  height: 50px;
 }
