--- a/site/styles.css
+++ b/site/styles.css
@@ -15,6 +15,18 @@
     display: block;
 }
 
+.button {
+    background-color: #white;
+    color: black;
+    border: 2px solid #3d31e9;
+  }
+  
+.button:hover {
+    background-color: #3d31e9;
+    color: white;
+    border: 2px solid black;
+}
+
 body {
     max-width: 80%;
 }
