--- a/site/output-styles/github.css
+++ b/site/output-styles/github.css
@@ -1,3 +1,5 @@
+/* stylelint-disable */
+
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 
 /**
@@ -799,3 +801,5 @@ code > span.in { color: #969896; font-weight: bold; font-style: italic; } /* Inf
     background-color: rgba(180, 237, 95, 0.5);
   }
 }
+
+/* stylelint-enable */
