--- a/site/styles.css
+++ b/site/styles.css
@@ -7,7 +7,6 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  font-family: "Computer Modern";
   height: 100%;
 }
 
@@ -29,15 +28,15 @@ body {
 }
 
 .button {
-    background-color: #white;
-    color: black;
-    border: 2px solid #3d31e9;
-  }
-  
+  background-color: white;
+  color: black;
+  border: 2px solid #3d31e9;
+}
+
 .button:hover {
-    background-color: #3d31e9;
-    color: white;
-    border: 2px solid black;
+  background-color: #3d31e9;
+  color: white;
+  border: 2px solid black;
 }
 
 .scroll_flex_element {
@@ -54,11 +53,8 @@ body {
 }
 
 textarea {
-  font-size: .8rem;
+  font-size: 0.8rem;
   letter-spacing: 1px;
-}
-
-textarea {
   height: inherit;
   padding: 10px;
   line-height: 1.5;
@@ -80,10 +76,10 @@ div.frame {
 }
 
 .frame {
-background-color: cadetblue;
-border-radius: 10px;
-border: 3px cadetblue solid;
-margin: 10px;
+  background-color: cadetblue;
+  border-radius: 10px;
+  border: 3px cadetblue solid;
+  margin: 10px;
 }
 
 .header {
